--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "aviator-proxy",
   "version": "1.0.0",
   "main": "proxy.js",
-  "type": "commonjs",
   "scripts": {
     "start": "node proxy.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ws": "^8.18.0",
+    "ws": "^8.15.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5"
   }
 }
